--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "z64viewer"]
 	path = z64viewer
 	url = https://github.com/z64me/z64viewer
+[submodule "nanovg"]
+	path = nanovg
+	url = https://github.com/memononen/nanovg
