--- a/resources/actor_property.toml
+++ b/resources/actor_property.toml
@@ -351,34 +351,43 @@
 	index = 0x0015
 	name = "Collectable Item"
 	category = "ITEMACTION"
-	variable = [
-		[ 0x0000, "Green Rupee" ],
-		[ 0x0001, "Blue Rupee" ],
-		[ 0x0002, "Red Rupee" ],
-		[ 0x0003, "Recovery Heart" ],
-		[ 0x0004, "Bomb" ],
-		[ 0x0005, "Arrow (1) //Used for collecting arrows stuck in walls" ],
-		[ 0x0006, "Heart Piece" ],
-		[ 0x0008, "Deku Seeds (5) or Arrows (5)" ],
-		[ 0x0009, "Deku Seeds (5) or Arrows (10)" ],
-		[ 0x000A, "Deku Seeds (5) or Arrows (30)" ],
-		[ 0x000B, "Bombs (5)" ],
-		[ 0x000C, "Deku Nut" ],
-		[ 0x000D, "Deku Stick" ],
-		[ 0x000E, "Large Magic Jar" ],
-		[ 0x000F, "Small Magic Jar" ],
-		[ 0x0010, "Deku Seeds (5) or Arrows (5)" ],
-		[ 0x0011, "Small Key" ],
-		[ 0x0012, "Flexible Drop //Used for randomized drops, see comments. Will spawn as an invisible Recovery Heart in some situations" ],
-		[ 0x0013, "Giant Orange Rupee" ],
-		[ 0x0014, "Large Purple Rupee" ],
-		[ 0x0015, "Deku Shield //May require Child Link's object" ],
-		[ 0x0016, "Hylian Shield" ],
-		[ 0x0017, "Zora Tunic" ],
-		[ 0x0018, "Goron Tunic" ],
-		[ 0x0019, "Bombs (5)" ],
-		[ 0x001A, "Invisible Item" ],
-	]
+	[[actor.property]]
+		name = "Type"
+		mask = 0x3F00
+		dict = [
+			[ 0x0000, "Green Rupee" ],
+			[ 0x0001, "Blue Rupee" ],
+			[ 0x0002, "Red Rupee" ],
+			[ 0x0013, "Giant Orange Rupee" ],
+			[ 0x0014, "Large Purple Rupee" ],
+			
+			[ 0x0011, "Small Key" ],
+			[ 0x0003, "Recovery Heart" ],
+			[ 0x0006, "Heart Piece" ],
+			
+			[ 0x0005, "Arrow 1" ],
+			[ 0x0008, "Seeds 5 / Arrows 5" ],
+			[ 0x0010, "Seeds 5 / Arrows 5" ],
+			[ 0x0009, "Seeds 5 / Arrows 10" ],
+			[ 0x000A, "Seeds 5 / Arrows 30" ],
+			
+			[ 0x0004, "Bomb" ],
+			[ 0x000B, "Bombs (5)" ],
+			[ 0x0019, "Bombs (5)" ],
+			
+			[ 0x000C, "Deku Nut" ],
+			[ 0x000D, "Deku Stick" ],
+			
+			[ 0x000F, "Small Magic Jar" ],
+			[ 0x000E, "Large Magic Jar" ],
+			
+			[ 0x0012, "Flexible Drop" ],
+			[ 0x0015, "Deku Shield" ],
+			[ 0x0016, "Hylian Shield" ],
+			[ 0x0017, "Zora Tunic" ],
+			[ 0x0018, "Goron Tunic" ],
+			[ 0x001A, "Invisible Item" ],
+		]
 	[[actor.property]]
 		name = "Collectible Flag"
 		mask = 0x3F00
@@ -394,14 +403,17 @@
 	index = 0x0018
 	name = "Fairy"
 	category = "ITEMACTION"
-	variable = [
-		[ 0x0000, "Navi" ],
-		[ 0x0001, "Bottled Healing Fairy" ],
-		[ 0x0002, "Roaming Healing Fairy" ],
-		[ 0x0004, "Group of Healing Fairies" ],
-		[ 0x0005, "Fairy Healing You" ],
-		[ 0x0007, "Roaming Large Healing Fairy" ],
-	]
+	[[actor.property]]
+		name = "Type"
+		mask = 0x000F
+		dict = [
+			[ 2, "Healing Fairy" ],
+			[ 7, "Large Healing Fairy" ],
+			[ 4, "Group of Healing Fairies" ],
+			[ 5, "Fairy Healing You" ],
+			[ 1, "Bottled Healing Fairy" ],
+			[ 0, "Navi" ],
+		]
 [[actor]]
 	index = 0x0019
 	object = 0x0013
@@ -435,7 +447,7 @@
 	name = "Peahat"
 	category = "ENEMY"
 	variable = [
-		[ 0x0000, "Flying Peahat //Spawns Larva" ],
+		[ 0x0000, "Flying Peahat" ],
 		[ 0x0001, "Peahat Larva" ],
 		[ 0xFFFF, "Burrowed Peahat" ],
 	]
