--- a/resources/actor_property.toml
+++ b/resources/actor_property.toml
@@ -1,3 +1,39 @@
+[common]
+	itemtable = [
+		[ 0x0000, "Green Rupee" ],
+		[ 0x0001, "Blue Rupee" ],
+		[ 0x0002, "Red Rupee" ],
+		[ 0x0013, "Giant Orange Rupee" ],
+		[ 0x0014, "Large Purple Rupee" ],
+		
+		[ 0x0011, "Small Key" ],
+		[ 0x0003, "Recovery Heart" ],
+		[ 0x0006, "Heart Piece" ],
+		
+		[ 0x0005, "Arrow 1" ],
+		[ 0x0008, "Seeds 5 / Arrows 5" ],
+		[ 0x0010, "Seeds 5 / Arrows 5" ],
+		[ 0x0009, "Seeds 5 / Arrows 10" ],
+		[ 0x000A, "Seeds 5 / Arrows 30" ],
+		
+		[ 0x0004, "Bomb" ],
+		[ 0x000B, "Bombs (5)" ],
+		[ 0x0019, "Bombs (5)" ],
+		
+		[ 0x000C, "Deku Nut" ],
+		[ 0x000D, "Deku Stick" ],
+		
+		[ 0x000F, "Small Magic Jar" ],
+		[ 0x000E, "Large Magic Jar" ],
+		
+		[ 0x0012, "Flexible Drop" ],
+		[ 0x0015, "Deku Shield" ],
+		[ 0x0016, "Hylian Shield" ],
+		[ 0x0017, "Zora Tunic" ],
+		[ 0x0018, "Goron Tunic" ],
+		[ 0x001A, "Invisible Item" ],
+	]
+
 [[actor]]
 	index = 0x0000
 	name = "Link / Spawn point"
@@ -354,40 +390,7 @@
 	[[actor.property]]
 		name = "Type"
 		mask = 0x00FF
-		variable = [
-			[ 0x0000, "Green Rupee" ],
-			[ 0x0001, "Blue Rupee" ],
-			[ 0x0002, "Red Rupee" ],
-			[ 0x0013, "Giant Orange Rupee" ],
-			[ 0x0014, "Large Purple Rupee" ],
-			
-			[ 0x0011, "Small Key" ],
-			[ 0x0003, "Recovery Heart" ],
-			[ 0x0006, "Heart Piece" ],
-			
-			[ 0x0005, "Arrow 1" ],
-			[ 0x0008, "Seeds 5 / Arrows 5" ],
-			[ 0x0010, "Seeds 5 / Arrows 5" ],
-			[ 0x0009, "Seeds 5 / Arrows 10" ],
-			[ 0x000A, "Seeds 5 / Arrows 30" ],
-			
-			[ 0x0004, "Bomb" ],
-			[ 0x000B, "Bombs (5)" ],
-			[ 0x0019, "Bombs (5)" ],
-			
-			[ 0x000C, "Deku Nut" ],
-			[ 0x000D, "Deku Stick" ],
-			
-			[ 0x000F, "Small Magic Jar" ],
-			[ 0x000E, "Large Magic Jar" ],
-			
-			[ 0x0012, "Flexible Drop" ],
-			[ 0x0015, "Deku Shield" ],
-			[ 0x0016, "Hylian Shield" ],
-			[ 0x0017, "Zora Tunic" ],
-			[ 0x0018, "Goron Tunic" ],
-			[ 0x001A, "Invisible Item" ],
-		]
+		variable = "common.itemtable"
 	[[actor.property]]
 		name = "Collectible Flag"
 		mask = 0x3F00
@@ -591,16 +594,16 @@
 	]
 [[actor]]
 	index = 0x002E
-	name = "Lifting Wooden Door"
+	name = "Shutter Door"
 	category = "DOOR"
 	variable = [
-		[ 0x0000, "Lifting door" ],
-		[ 0x0040, "Front side attached to Room Clear" ],
-		[ 0x0080, "Front side attached to Switch" ],
-		[ 0x00C0, "Back side permanently locked" ],
-		[ 0x0140, "Boss door ", 0x00B0 ],
-		[ 0x01C0, "Front side attached to Switch, Back to Room Clear" ],
-		[ 0x02C0, "Key Locked door" ],
+		[ 0x0000, "Shutter door" ],
+		[ 0x0040, "Front Side Clear" ],
+		[ 0x0080, "Front Side Switch" ],
+		[ 0x00C0, "Back Locked" ],
+		[ 0x0140, "Boss ", 0x00B0 ],
+		[ 0x01C0, "Front Switch, Back Clear" ],
+		[ 0x02C0, "Key Locked" ],
 	]
 	[[actor.property]]
 		name = "Switch Flag"
@@ -2484,40 +2487,7 @@
 	[[actor.property]]
 		name = "Item"
 		mask = 0x00FF
-		variable = [
-			[ 0x0000, "Green Rupee" ],
-			[ 0x0001, "Blue Rupee" ],
-			[ 0x0002, "Red Rupee" ],
-			[ 0x0013, "Giant Orange Rupee" ],
-			[ 0x0014, "Large Purple Rupee" ],
-			
-			[ 0x0011, "Small Key" ],
-			[ 0x0003, "Recovery Heart" ],
-			[ 0x0006, "Heart Piece" ],
-			
-			[ 0x0005, "Arrow 1" ],
-			[ 0x0008, "Seeds 5 / Arrows 5" ],
-			[ 0x0010, "Seeds 5 / Arrows 5" ],
-			[ 0x0009, "Seeds 5 / Arrows 10" ],
-			[ 0x000A, "Seeds 5 / Arrows 30" ],
-			
-			[ 0x0004, "Bomb" ],
-			[ 0x000B, "Bombs (5)" ],
-			[ 0x0019, "Bombs (5)" ],
-			
-			[ 0x000C, "Deku Nut" ],
-			[ 0x000D, "Deku Stick" ],
-			
-			[ 0x000F, "Small Magic Jar" ],
-			[ 0x000E, "Large Magic Jar" ],
-			
-			[ 0x0012, "Flexible Drop" ],
-			[ 0x0015, "Deku Shield" ],
-			[ 0x0016, "Hylian Shield" ],
-			[ 0x0017, "Zora Tunic" ],
-			[ 0x0018, "Goron Tunic" ],
-			[ 0x001A, "Invisible Item" ],
-		]
+		variable = "common.itemtable"
 [[actor]]
 	index = 0x0112
 	name = "Invisible Collectable"
@@ -3898,6 +3868,7 @@
 		name = "Collectible Item"
 		mask = 0x00FF
 		source = "rot_x"
+		variable = "common.itemtable"
 	[[actor.property]]
 		name = "Collectible Flag"
 		mask = 0x003F
